Revision history for Perl extension Net::Amazon:
0.60 (xx/yy/zzzz)
   (cb) Push from cpanservice: Small dist maintenance. Please use latest 
        ExtUtils::MakeMaker for release.

0.59 (11/02/2009)
   (cb) DigitalMusicTrack.pm was not included, reported by Matt 
        Okeson-Harlow.

0.58 (11/01/2009)
   (cb) Update the Keywords library in Validate - reported by Dave
        Hodgkinson.
   (cb) Added customer_location and customer_name accessors to review
        results for Scott Weisman.
   (cb) Nathan Handler re-re-reported a man page issue, rt 46708.

0.57 (09/08/2009)
   (cb) David Raab reported an incomplete kit via rt.cpan.org.  Re-run
        make manifest to address my mistake.

0.56 (09/07/2009)
   (cb) Add support for searching MP3 downloads as requsted by Dave 
        Hodgkinson.
   (cb) Required for MP3 Downloads, and inspired by Vince Veselosky's 
        fix, update aws4-itemsearch.
   (cb) secret_key is now a required parameter.  Update all of the example
        scripts with the secret_key parameter.

0.55 (07/20/2009)
   (cb) Yuichi Tateno implemented support for the SearchIndex all.
   (cb) Vince Veselosky fixed adm/aws4-types script, and as a result
        updated classes in Validate/Type.
   (cb) Update to WSDL 2009-07-16.

0.54 (06/17/2009)
   (cb) Alfons Wittmann reported that signing requests broke caching due
        to the current time being incorporated into every signed URL 
	submitted.

0.53 (06/13/2009)
   (cb) Nathan Handler re-reported a man page issue on Ubuntu, rt 46708.  
        I managed to fix 197 issues, except for the specific one he called 
        out in the bug.

0.52 (06/09/2009)
   (cb) Nathan Handler reported a man page issue on Ubuntu, rt 46708.

0.51 (06/05/2009)
   (cb) Vince Veselosky submitted a patch to support request signing, a
        feature that is required for accessing AWS after 2009-08-15.
        Upgrading is recommended.
   (cb) Complete the upgrade to WSDL 2009-03-31 that was started by